force-app/main/default/objects/ScalarEntity__c/ScalarEntity__c.object-meta.xml
<CustomObject>
    <description>Simple entity description.</description>
    <label>ScalarEntity</label>
    <nameField>
        <label>ScalarEntity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScalarEntities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>