force-app/main/default/objects/ScalarEntity__c/fields/CheckboxField__c.field-meta.xml
<CustomField>
    <fullName>CheckboxField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field description.</description>
    <label>CheckboxField</label>
    <type>Checkbox</type>
</CustomField>