force-app/main/default/objects/ScalarEntity__c/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <description>Currency field description.</description>
    <label>DateField</label>
    <type>Date</type>
</CustomField>