force-app/main/default/objects/ScalarEntity__c/fields/DateTimeField__c.field-meta.xml
<CustomField>
    <fullName>DateTimeField__c</fullName>
    <description>Date / time field description.</description>
    <label>DateTimeField</label>
    <type>DateTime</type>
</CustomField>