force-app/main/default/objects/ScalarEntity__c/fields/EmailField__c.field-meta.xml
<CustomField>
    <fullName>EmailField__c</fullName>
    <description>Email field Description</description>
    <label>EmailField</label>
    <type>Email</type>
</CustomField>