force-app/main/default/objects/ScalarEntity__c/fields/EncryptedTextField__c.field-meta.xml
<CustomField>
    <fullName>EncryptedTextField__c</fullName>
    <description>Encrypted text field description.</description>
    <label>EncryptedTextField</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>