force-app/main/default/objects/ScalarEntity__c/fields/MultiPicklistField__c.field-meta.xml
<CustomField>
    <fullName>MultiPicklistField__c</fullName>
    <description>Multi Picklist field description.</description>
    <label>MultiPicklistField</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>