force-app/main/default/objects/ScalarEntity__c/fields/NumberField__c.field-meta.xml
<CustomField>
    <fullName>NumberField__c</fullName>
    <description>Number field description.</description>
    <label>NumberField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>