force-app/main/default/objects/ScalarEntity__c/fields/PercentField__c.field-meta.xml
<CustomField>
    <fullName>PercentField__c</fullName>
    <description>Percent field description.</description>
    <label>PercentField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>