force-app/main/default/objects/ScalarEntity__c/fields/PhoneField__c.field-meta.xml
<CustomField>
    <fullName>PhoneField__c</fullName>
    <description>Phone field description.</description>
    <label>PhoneField</label>
    <type>Phone</type>
</CustomField>