force-app/main/default/objects/ScalarEntity__c/fields/PicklistField__c.field-meta.xml
<CustomField>
    <fullName>PicklistField__c</fullName>
    <description>Picklist field description.</description>
    <label>PicklistField</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>