force-app/main/default/objects/ScalarEntity__c/fields/RichTextField__c.field-meta.xml
<CustomField>
    <fullName>RichTextField__c</fullName>
    <description>Rich text field description.</description>
    <label>RichTextField</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>