force-app/main/default/objects/ScalarEntity__c/fields/TextAreaField__c.field-meta.xml
<CustomField>
    <fullName>TextAreaField__c</fullName>
    <description>Text area field description.</description>
    <label>TextAreaField</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>