force-app/main/default/objects/ScalarEntity__c/fields/URLField__c.field-meta.xml
<CustomField>
    <fullName>URLField__c</fullName>
    <description>URL field description.</description>
    <label>URLField</label>
    <type>Url</type>
</CustomField>